--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        ruby: ["3.1", "3.2", "3.3"]
         mongodb-version: ["4.0", "4.2", "4.4", "5.0", "6.0", "7.0", "8.0"]
 
     steps:
@@ -30,5 +31,6 @@ jobs:
         uses: supercharge/mongodb-github-action@1.11.0
         with:
           mongodb-version: ${{ matrix.mongodb-version }}
+      - run: bin/rails zeitwerk:check
       - run: bin/rake errbit:bootstrap
       - run: bin/rspec
