CI: run tests on ruby 3.1, 3.2 and 3.3

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -24,9 +24,10 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
+          ruby-version: ${{ matrix.ruby }}
+          rubygems: latest
+          bundler: latest
           bundler-cache: true
-          rubygems: "3.5.23"
-          bundler: "2.5.23"
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.11.0
         with:
